workspace = { members = ["engine_tester"] }
[package]
name = "rustgldrawer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.10.1"
gl = "0.14.0"
glfw = "0.54.0"
log = "0.4.20"
thiserror = "1.0.56"
